--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Untitled Document</title>
+<title>Shivam Gupta</title>
+<link rel="stylesheet" href="css/master.css">
+<link rel="icon" href="favicon.ico">
 </head>
+
 
 <body>
 </body>
